2003-03-17  Bruno Haible  <bruno@clisp.org>

	* onceonly_2_57.m4: Likewise.
	* onceonly.m4: Require autoconf 2.54 or newer.
	(m4_quote): Remove macro.

2003-03-14  Bruno Haible  <bruno@clisp.org>

	* onceonly_2_57.m4 (AC_CHECK_HEADERS_ONCE, AC_CHECK_FUNCS_ONCE,
	AC_CHECK_DECLS_ONCE): Quote AC_FOREACH variable-expansions properly.

2003-03-13  Paul Eggert  <eggert@twinsun.com>

	* onceonly.m4 (m4_quote): New macro.
	(AC_CHECK_HEADERS_ONCE, AC_CHECK_FUNCS_ONCE, AC_CHECK_DECLS_ONCE):
	Quote AC_FOREACH variable-expansions properly.

2003-02-19  Paolo Bonzini  <bonzini@gnu.org>

	* poll.m4: New file.

2003-02-18  Paolo Bonzini  <bonzini@gnu.org>

	* mathl.m4: New file.

2003-02-17  Bruno Haible  <bruno@clisp.org>

	* mkdtemp.m4: New file, from GNU gettext with modifications.

2003-02-02  Jim Meyering  <jim@meyering.net>

	* regex.m4 (jm_INCLUDED_REGEX): Detect broken re_search in
	e.g. glibc-2.2.93.

2003-01-31  Bruno Haible  <bruno@clisp.org>

	* rename.m4 (vb_FUNC_RENAME): Add a redirection from 'rename' to
	'rpl_rename'.
	* strnlen.m4 (gl_FUNC_STRNLEN): Add a redirection from 'strnlen' to
	'rpl_strnlen'.
	* strtod.m4 (gl_FUNC_STRTOD): Add a redirection from 'strtod' to
	'rpl_strtod'.
	* utime.m4 (jm_FUNC_UTIME): Add a redirection from 'utime' to
	'rpl_utime'.

2003-01-30  Bruno Haible  <bruno@clisp.org>

	* signed.m4: New file, from GNU gettext.
	* longdouble.m4: New file, from GNU gettext.
	* wchar_t.m4: New file, from GNU gettext.
	* wint_t.m4: New file, from GNU gettext.
	* vasnprintf.m4: New file.
	* vasprintf.m4: New file.

2003-01-29  Bruno Haible  <bruno@clisp.org>

	* stpncpy.m4: New file.

2003-01-23  Jim Meyering  <jim@meyering.net>

	* dirfd.m4 (UTILS_FUNC_DIRFD): Correct typo: s/-1/no/ that kept this
	from working on systems without dirfd (at least Irix and OSF1/Tru64).

2003-01-16  Jim Meyering  <jim@meyering.net>

	* regex.m4: The `regex' struct is both input and output.
	Initialize it before each use.  Patch by Tim Waugh.
